--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,21 +21,35 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
+
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
+      id: setup_python
       with:
         python-version: "3.10"
-        cache: "pip"
+
+    - name: Cache venv
+      uses: actions/cache@v3
+      with:
+        key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version}}-${{ hashFiles('requirements.txt') }}
+        path: .venv
+
     - name: Install dependencies
       run: |
+        python -m venv .venv
+        source .venv/bin/activate
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e src/sat/.
+        echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
+        echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+
     - name: Test with pytest
       run: |
         pytest
