--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -21,18 +21,30 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-        cache: "pip"
+
+    - name: Cache venv
+      uses: actions/cache@v3
+      with:
+        key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version}}-${{ hashFiles('requirements.txt') }}
+        path: .venv
+
     - name: Install dependencies
       run: |
+        python -m venv .venv
+        source .venv/bin/activate
         python -m pip install --upgrade pip
         pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e src/sat/.
+        echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
+        echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
+
     - name: Lint with flake8
       run: |
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+        flake8 ./src --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 ./src --count --max-complexity=10 --max-line-length=127 --statistics
