--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,11 +28,11 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Cache venv
-      uses: actions/cache@v3
-      with:
-        key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version}}-${{ hashFiles('requirements.txt') }}
-        path: .venv
+    # - name: Cache venv
+    #   uses: actions/cache@v3
+    #   with:
+    #     key: venv-${{ runner.os }}-${{ steps.setup_python.outputs.python-version}}-${{ hashFiles('requirements.txt') }}
+    #     path: .venv
 
     - name: Install dependencies
       run: |
